--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -286,9 +286,6 @@
   "facilitates_the_creation_of_your_own_ad_blocking_rules_to_customize_your_ghostery_experience_": {
     "message": "Facilitates the creation of your own ad-blocking rules to customize your Ghostery experience."
   },
-  "for_more_information_read_our_full": {
-    "message": "For more information read our full"
-  },
   "get_help": {
     "message": "Get help"
   },
@@ -492,7 +489,7 @@
     "message": "Prevents various tracking techniques using AI-driven technology."
   },
   "privacy_policy": {
-    "message": "privacy policy"
+    "message": "Privacy policy"
   },
   "privacy_policy___panel_company": {
     "message": "Privacy policy"
