--- a/src/_locales/pl/messages.json
+++ b/src/_locales/pl/messages.json
@@ -286,9 +286,6 @@
   "facilitates_the_creation_of_your_own_ad_blocking_rules_to_customize_your_ghostery_experience_": {
     "message": "Umożliwia tworzenie własnych reguł blokowania reklam, aby dostosować działanie Ghostery do swoich potrzeb."
   },
-  "for_more_information_read_our_full": {
-    "message": "Aby uzyskać więcej informacji, przeczytaj "
-  },
   "get_help": {
     "message": "Uzyskaj pomoc"
   },
@@ -492,7 +489,7 @@
     "message": "Chroni twoje dane przed śledzeniem w sieci dzięki technologii wspomaganej przez AI."
   },
   "privacy_policy": {
-    "message": "polityka prywatności"
+    "message": "Polityka prywatności"
   },
   "privacy_policy___panel_company": {
     "message": "Polityka prywatności"
