--- a/src/_locales/zh_TW/messages.json
+++ b/src/_locales/zh_TW/messages.json
@@ -286,9 +286,6 @@
   "facilitates_the_creation_of_your_own_ad_blocking_rules_to_customize_your_ghostery_experience_": {
     "message": "協助您創建自己的廣告攔截規則，以自訂您的Ghostery體驗。."
   },
-  "for_more_information_read_our_full": {
-    "message": "如欲了解更多訊息，請閱讀我們的全文"
-  },
   "get_help": {
     "message": "取得幫助"
   },
@@ -492,7 +489,7 @@
     "message": "使用 AI 科技防止各種追蹤技術。"
   },
   "privacy_policy": {
-    "message": "隱私權政策"
+    "message": "隐私政策"
   },
   "privacy_policy___panel_company": {
     "message": "隐私政策"
