Update extension summary

--- a/src/_locales/de/messages.json
+++ b/src/_locales/de/messages.json
@@ -388,7 +388,7 @@
     "message": "Ghostery Tracker- & Werbeblocker | Datenschutz AdBlocker"
   },
   "manifest_short_description": {
-    "message": "Die leistungsstarke Datenschutz-Erweiterung - blockiert Werbung, stoppt Tracker und beschleunigt Webseiten"
+    "message": "Leistungsstark und benutzerfreundlich: Blockiere Werbung, Tracker und beschleunige Webseiten mit der Ghostery Datenschutz-Erweiterung."
   },
   "menu": {
     "message": "Menü"
