--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -388,7 +388,7 @@
     "message": "Ghostery Tracker & Ad Blocker - Privacy AdBlock"
   },
   "manifest_short_description": {
-    "message": "A powerful privacy extension that blocks ads, prevents trackers, and accelerates website loading"
+    "message": "Powerful and easy-to-use privacy extension. Block ads, trackers & speed up your web."
   },
   "menu": {
     "message": "Menu"
