--- a/src/_locales/es/messages.json
+++ b/src/_locales/es/messages.json
@@ -388,7 +388,7 @@
     "message": "Ghostery Rastreador & Bloqueador de anuncios - Privacidad AdBlock"
   },
   "manifest_short_description": {
-    "message": "Una poderosa extensión de privacidad que bloquea anuncios, previene rastreadores y acelera la carga de sitios web"
+    "message": "Potente y fácil de usar extensión de privacidad. Bloquea anuncios, rastreadores y acelera tu navegación web."
   },
   "menu": {
     "message": "Menú"
