--- a/src/_locales/fr/messages.json
+++ b/src/_locales/fr/messages.json
@@ -388,7 +388,7 @@
     "message": "Ghostery Bloqueur de Traqueurs et de Publicités - confidentialité"
   },
   "manifest_short_description": {
-    "message": "Une puissante extension de confidentialité qui bloque les publicités, empêche les trackers et accélère le chargement des sites web"
+    "message": "Extension de confidentialité puissante et facile à utiliser. Bloquez les publicités, les trackers et accélérez votre navigation."
   },
   "menu": {
     "message": "Menu"
