--- a/src/_locales/it/messages.json
+++ b/src/_locales/it/messages.json
@@ -388,7 +388,7 @@
     "message": "Ghostery Blocco Annunci e Tracker - Privacy AdBlock"
   },
   "manifest_short_description": {
-    "message": "Una potente estensione per la privacy che blocca gli annunci, previene i Tracker e accelera il caricamento dei siti web"
+    "message": "Potente ed intuitiva estensione per la privacy. Blocca annunci, Tracker e accelera il tuo web."
   },
   "menu": {
     "message": "Menu"
