--- a/src/_locales/ja/messages.json
+++ b/src/_locales/ja/messages.json
@@ -388,7 +388,7 @@
     "message": "Ghosteryトラッカー＆広告ブロック - プライバシー広告ブロック"
   },
   "manifest_short_description": {
-    "message": "強力なプライバシー拡張機能で、広告をブロックし、トラッカーを防ぎ、ウェブサイトの読み込みを高速化します。"
+    "message": "強力で使いやすいプライバシー拡張機能。広告やトラッカーをブロックし、ウェブを高速化します。."
   },
   "menu": {
     "message": "メニュー"
