--- a/src/_locales/pl/messages.json
+++ b/src/_locales/pl/messages.json
@@ -388,7 +388,7 @@
     "message": "Ghostery Bloker Trackerów i Reklam - Prywatność AdBlock"
   },
   "manifest_short_description": {
-    "message": "Potężne rozszerzenie chroniące prywatność, które blokuje reklamy, zapobiega trackerom i przyspiesza ładowanie stron internetowych"
+    "message": "Potężne i łatwe w użyciu rozszerzenie do ochrony prywatności. Blokuj reklamy, trackery i przyspiesz swoje przeglądanie internetu."
   },
   "menu": {
     "message": "Menu"
