--- a/src/_locales/pt_BR/messages.json
+++ b/src/_locales/pt_BR/messages.json
@@ -388,7 +388,7 @@
     "message": "Ghostery Tracker & Ad Blocker - Privacidade AdBlock"
   },
   "manifest_short_description": {
-    "message": "Uma poderosa extensão de privacidade que bloqueia anúncios, impede rastreadores e acelera o carregamento de sites"
+    "message": "Extensão de privacidade poderosa e fácil de usar. Bloqueie anúncios, rastreadores e acelere sua navegação na web."
   },
   "menu": {
     "message": "Menu"
