--- a/src/_locales/ru/messages.json
+++ b/src/_locales/ru/messages.json
@@ -388,7 +388,7 @@
     "message": "Ghostery Трекер & Ad Blocker - приватный блокировщик рекламы"
   },
   "manifest_short_description": {
-    "message": "Мощное расширение для защиты конфиденциальности, которое блокирует рекламу, предотвращает трекеры и ускоряет загрузку веб-сайтов"
+    "message": "Мощное и простое в использовании расширение для защиты конфиденциальности. Блокируйте рекламу, трекеры и ускоряйте работу в интернете."
   },
   "menu": {
     "message": "Меню"
