--- a/src/_locales/zh_CN/messages.json
+++ b/src/_locales/zh_CN/messages.json
@@ -388,7 +388,7 @@
     "message": "Ghostery 跟踪器和广告拦截器 - 隐私广告拦截器"
   },
   "manifest_short_description": {
-    "message": "一个强大的隐私扩展，能够屏蔽广告、防止追踪器并加速网站加载"
+    "message": "功能强大且易于使用的隐私扩展。阻止广告、跟踪器并加速您的网络。."
   },
   "menu": {
     "message": "菜单"
