--- a/src/_locales/zh_TW/messages.json
+++ b/src/_locales/zh_TW/messages.json
@@ -388,7 +388,7 @@
     "message": "Ghostery 追蹤器和廣告攔截器 - 隱私 AdBlock"
   },
   "manifest_short_description": {
-    "message": "強大的隱私擴充功能，能阻擋廣告、防止追蹤器並加速網站載入"
+    "message": "功能強大且易於使用的隱私擴充套件。阻擋廣告、追蹤器並加速您的網頁。."
   },
   "menu": {
     "message": "選單"
