--- a/src/_locales/ko/messages.json
+++ b/src/_locales/ko/messages.json
@@ -388,7 +388,7 @@
     "message": "Ghostery 트래커 & 광고 차단기 - 개인정보 보호 광고 차단기"
   },
   "manifest_short_description": {
-    "message": "광고와 트래커를 차단하고 웹 사이트 속도를 빠르게 하는 강력한 개인정보 보호 확장 프로그램입니다."
+    "message": "강력하고 사용하기 쉬운 개인정보 보호 확장 기능. 광고와 추적기를 차단하고 웹 속도를 높이세요."
   },
   "menu": {
     "message": "메뉴"
