--- a/src/_locales/pl/messages.json
+++ b/src/_locales/pl/messages.json
@@ -491,9 +491,6 @@
   "privacy_policy": {
     "message": "Polityka prywatności"
   },
-  "privacy_policy___panel_company": {
-    "message": "Polityka prywatności"
-  },
   "privacy_protection": {
     "message": "Ochrona prywatności"
   },
@@ -579,6 +576,9 @@
   },
   "submit_a_new_tracker": {
     "message": "Zgłoś nowego tropiciela"
+  },
+  "support": {
+    "message": "Wsparcie"
   },
   "suspends_privacy_protection_globally_for_1_day_": {
     "message": "Zawiesza ochronę prywatności globalnie na 1 dzień."
