--- a/src/_locales/es/messages.json
+++ b/src/_locales/es/messages.json
@@ -489,7 +489,7 @@
     "message": "Previene diversas técnicas de rastreo con tecnología de inteligencia artificial."
   },
   "privacy_policy": {
-    "message": "Privacy Policy"
+    "message": "Política de privacidad"
   },
   "privacy_protection": {
     "message": "Protección de la privacidad"
