--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -381,6 +381,9 @@
   "learn_more_on_supported_syntax": {
     "message": "Learn more on supported syntax"
   },
+  "leave_a_review_today": {
+    "message": "Leave a review today"
+  },
   "load_more": {
     "message": "Load more"
   },
@@ -688,6 +691,9 @@
   },
   "we_know_you_rely_on_ghostery_for_a_smooth_youtube_experience__until_a_more_refined_solution_emerges__here_s_a_temporary_fix_": {
     "message": "We know you rely on Ghostery for a smooth YouTube experience. Until a more refined solution emerges, here’s a temporary fix."
+  },
+  "we_re_so_glad_ghostery_has_your_heart__help_others_find_us_too___it_only_takes_a_moment_": {
+    "message": "We're so glad Ghostery has your heart! Help others find us too - it only takes a moment."
   },
   "web_trackers": {
     "message": "Web Trackers"
