--- a/src/_locales/ja/messages.json
+++ b/src/_locales/ja/messages.json
@@ -381,6 +381,9 @@
   "learn_more_on_supported_syntax": {
     "message": "サポートされている構文について詳しく学ぶ"
   },
+  "leave_a_review_today": {
+    "message": "レビューを残してください"
+  },
   "load_more": {
     "message": "さらに読み込む"
   },
@@ -688,6 +691,9 @@
   },
   "we_know_you_rely_on_ghostery_for_a_smooth_youtube_experience__until_a_more_refined_solution_emerges__here_s_a_temporary_fix_": {
     "message": "スムーズなYouTube体験のためにGhosteryに依存していることは承知しています。より洗練されたソリューションが登場するまでの一時的な解決策をご紹介します。"
+  },
+  "we_re_so_glad_ghostery_has_your_heart__help_others_find_us_too___it_only_takes_a_moment_": {
+    "message": "Ghosteryを気に入っていただきありがとうございます！他の人にも見つけてもらえるように手助けしてください。ほんの一瞬でできます。."
   },
   "web_trackers": {
     "message": "ウェブトラッカー"
