--- a/src/_locales/pl/messages.json
+++ b/src/_locales/pl/messages.json
@@ -381,6 +381,9 @@
   "learn_more_on_supported_syntax": {
     "message": "Dowiedz się więcej o obsługiwanej składni"
   },
+  "leave_a_review_today": {
+    "message": "Napisz recenzję już dziś"
+  },
   "load_more": {
     "message": "Załaduj więcej"
   },
@@ -688,6 +691,9 @@
   },
   "we_know_you_rely_on_ghostery_for_a_smooth_youtube_experience__until_a_more_refined_solution_emerges__here_s_a_temporary_fix_": {
     "message": "Wiemy, że polegasz na Ghostery, aby płynnie korzystać z YouTube. Dopóki nie pojawi się bardziej wyrafinowane rozwiązanie, oto tymczasowa poprawka."
+  },
+  "we_re_so_glad_ghostery_has_your_heart__help_others_find_us_too___it_only_takes_a_moment_": {
+    "message": "Cieszymy się, że Ghostery zdobyło Twoje serce! Pomóż innym nas znaleźć - to zajmie tylko chwilę."
   },
   "web_trackers": {
     "message": "Trackery"
