--- a/src/_locales/ko/messages.json
+++ b/src/_locales/ko/messages.json
@@ -42,7 +42,7 @@
     "message": "예외 추가"
   },
   "add_on_s_health": {
-    "message": "애드온 상태"
+    "message": "확장 프로그램 상태"
   },
   "add_website": {
     "message": "웹 사이트 추가"
@@ -73,7 +73,7 @@
     "message": "보호 상태를 변경한 모든 웹 사이트가 여기에 표시됩니다."
   },
   "allow_ghostery_in_private_windows": {
-    "message": "시크릿 모드에서 Ghostery 허용"
+    "message": "게스트 모드 혹은 개인정보 보호 탭에서 Ghostery 허용"
   },
   "allow_trusted_scriptlets": {
     "message": "위험한 스크립팅 실행(Trusted scriptlet) 허용하기"
@@ -126,7 +126,7 @@
     "message": "이 웹 사이트에서 차단됨"
   },
   "blocks_additional_ads__trackers__and_pop_ups_specific_to_the_language_of_websites_you_visit__enable_only_the_languages_you_need_to_avoid_slowing_down_your_browser_": {
-    "message": "방문하시는 웹 사이트 언어에 한하여 추가로 광고와 트래커, 팝업을 차단합니다. 필요한 언어만 활성화하면 웹 브라우저가 느려지는걸 방지할 수 있습니다."
+    "message": "사용하시는 언어의 웹 사이트들에 한해 추가로 광고와 트래커, 팝업을 차단합니다. 필요한 언어만 활성화하면 웹 브라우저가 느려지는걸 방지할 수 있습니다."
   },
   "browser__vendor": {
     "message": "브라우저 종류"
@@ -165,7 +165,7 @@
     "message": "문의"
   },
   "contact_support": {
-    "message": "지원 창구에 문의"
+    "message": "지원팀에 문의하기"
   },
   "contribute_to_ghostery_tracker_database_on_github": {
     "message": "GitHub에서 Ghostery 트래커 데이터베이스에 기여하기"
@@ -177,7 +177,7 @@
     "message": "클립보드에 복사됨"
   },
   "cosmetic_filters__@_0_": {
-    "message": "시각적 필터: $${0}"
+    "message": "시각 필터: $${0}"
   },
   "country": {
     "message": "국가"
@@ -196,7 +196,7 @@
     "message": "사용자 필터가 업데이트되었습니다"
   },
   "customer_interaction": {
-    "message": "고객 상담",
+    "message": "고객 맞춤 경험 제공",
     "description": "Tracker category name"
   },
   "data_collection_summary": {
@@ -218,7 +218,7 @@
     "message": "브라우저 툴바의 Ghostery 아이콘에 트래커 갯수를 표시합니다."
   },
   "dnr_rules__@_0_": {
-    "message": "DNR 필터: $${0}"
+    "message": "네트워크(DNR) 필터: $${0}"
   },
   "don_t_ask_again": {
     "message": "다시 묻지 않기"
@@ -237,7 +237,7 @@
     "message": "지금 광고 차단 사용"
   },
   "enable_ghostery": {
-    "message": "Ghostery 사용"
+    "message": "Ghostery 사용하기"
   },
   "enable_ghostery_to_get_started": {
     "message": "시작하려면 Ghostery를 사용 설정해주세요"
@@ -277,14 +277,14 @@
     "message": "확장 프로그램: 버전, 설치 날짜, 무작위 설치 번호 (1에서 100까지), 기본 설정, 기여 상태"
   },
   "extension_id_is_removed_from_the_stack_traces_": {
-    "message": "스택 추적에서 확장 ID가 제거됩니다."
+    "message": "스택 추적에서 확장 프로그램 ID가 제거됩니다."
   },
   "extensions": {
     "message": "확장 프로그램",
     "description": "Tracker category name"
   },
   "facilitates_the_creation_of_your_own_ad_blocking_rules_to_customize_your_ghostery_experience_": {
-    "message": "Ghostery 경험을 맞춤화하기 위해 자신만의 광고 차단 규칙을 생성할 수 있도록 지원합니다."
+    "message": "더 나은 Ghostery 경험을 위해 사용자 별 광고 차단 규칙을 생성할 수 있도록 지원합니다."
   },
   "get_help": {
     "message": "도움받기"
@@ -311,7 +311,7 @@
     "message": "이 웹 사이트에서 Ghostery 사용을 잠시 멈춥니다."
   },
   "ghostery_never_collects_personal_information_like_passwords__browsing_history_or_the_content_of_the_pages_you_visit_": {
-    "message": "고스트리는 비밀번호, 검색 기록 또는 방문한 페이지의 내용을 수집하지 않습니다."
+    "message": "Ghostery는 비밀번호, 검색 기록 또는 방문한 페이지의 내용을 수집하지 않습니다."
   },
   "ghostery_paused": {
     "message": "Ghostery 사용 중지됨"
@@ -332,13 +332,13 @@
     "message": "Ghostery가 이 페이지에서 얼마나 많은 트래커가 차단되었는지 보여줍니다. Ghostery 아이콘을 클릭하면 더 자세한 정보를 볼 수 있습니다."
   },
   "hashes_of_potentially_unique_identifier_in_requests_parameters": {
-    "message": "요청 매개변수의 잠재적으로 고유한 식별자의 해시"
+    "message": "요청 매개변수에 포함된 잠재적 고유 식별자의 해시"
   },
   "help_ghostery_fight_for_a_web_where_privacy_is_a_basic_human_right_": {
     "message": "Ghostery가 개인정보 보호가 곧 기본권인 웹 생태계를 위해 싸울 수 있도록 도와주세요."
   },
   "helps_ghostery_fix_broken_pages_faster__by_activating_you_can_test_experimental_filters_and_support_us_with_feedback__please_send_a_message_to_support@ghostery_com_describing_how_your_experience_changed_after_enabling_": {
-    "message": "Ghostery가 망가진 페이지를 더 빠르게 고칠 수 있도록 도와주세요. 이 항목을 사용하면 실험적 필터를 사용해보고 후기를 남겨 저희를 도울 수 있습니다. support@ghostery.com으로 메세지를 보내 사용 후 경험이 어떻게 바뀌었는지 알려주세요."
+    "message": "이 항목을 사용하면 실험적 필터를 사용해보고 후기를 남겨 저희를 도울 수 있습니다. support@ghostery.com으로 메세지를 보내 사용 후 경험이 어떻게 바뀌었는지 알려주세요. Ghostery가 망가진 페이지를 더 빠르게 고치도록 돕습니다."
   },
   "hey__do_you_enjoy_ghostery_and_want_to_support_our_work_": {
     "message": "Ghostery가 마음에 드셨다면 저희 제품을 함께 개선해보지 않으시겠습니까?"
@@ -355,13 +355,13 @@
     "description": "'add-on' means 'browser extension'"
   },
   "it_exists_thanks_to_micro_contributions_of_every_ghostery_user_who_chooses_to_send_non_personal_information_to_whotracks_me__the_input_enables_ghostery_to_provide_real_time_intel_on_trackers_which_in_turn_provides_protection_to_the_entire_ghostery_community_": {
-    "message": "이는 모두 WhoTracks.Me에 익명으로 정보를 공유해주시는 모든 소규모 기여자분들 덕분입니다. 모든 정보는 Ghostery가 커뮤니티의 모두에게 실시간 트래커 정보를 기반으로 보호 기능을 제공하는데에 사용됩니다."
+    "message": "이는 모두 WhoTracks.Me에 익명으로 정보를 공유해주시는 기여자분들 덕분입니다. 모든 정보는 Ghostery가 커뮤니티에 실시간 트래커 정보 기반의 보호 기능을 제공하는데에 사용됩니다."
   },
   "join_ghostery": {
-    "message": "Ghostery 가입"
+    "message": "Ghostery 가입하기"
   },
   "k_anonymity_protected_reports_of_page_shows": {
-    "message": "k-익명성 보호 페이지 보고서 표시"
+    "message": "k-anonymity로 보호된 페이지 보고서 표시"
   },
   "keep_disabled": {
     "message": "계속 꺼두기"
@@ -397,7 +397,7 @@
     "message": "메뉴"
   },
   "mind_that_not_all_listed_activities_are_trackers__that_is_not_all_of_them_collect_personal_data_": {
-    "message": "표시된 모든 항목이 개인정보를 수집하는 트래커는 아님에 유의하세요."
+    "message": "표시된 모든 항목이 개인정보를 수집하는 트래커는 아닙니다."
   },
   "miscellaneous": {
     "message": "기타",
@@ -474,10 +474,10 @@
     "message": "일시 중지됨"
   },
   "performance_telemetry": {
-    "message": "성능 원격 측정"
+    "message": "성능 측정"
   },
   "permission_required": {
-    "message": "권한 필요함"
+    "message": "권한 누락됨"
   },
   "pin_extension_for_easy_access": {
     "message": "확장 프로그램을 고정하고 빠르게 접근해보세요"
@@ -540,7 +540,7 @@
     "message": "피드백 보내기"
   },
   "sentry_sdk_is_in_use_to_gather_and_send_the_reports__but_sentry_does_only_receive_information_above___no_two_requests_can_be_linked_with_one_another_and_browser_ip_is_never_shared_with_sentry_": {
-    "message": "Sentry SDK는 보고서를 수집하고 전송하는 데 사용되지만, Sentry는 위의 정보만 수신하며 두 요청이 서로 연결될 수 없고 브라우저 IP는 Sentry와 공유되지 않습니다."
+    "message": "Sentry SDK는 위 정보만을 토대로 보고서를 전송하기 위해 사용됩니다. 요청이 여러 개 전송되더라도 각각은 연관성을 가지지 않으며 IP주소는 Sentry와 공유되지 않습니다."
   },
   "settings_sync": {
     "message": "설정 동기화"
@@ -575,7 +575,7 @@
     "message": "소프트웨어 라이선스"
   },
   "statistical_reports_on_navigational_routes": {
-    "message": "항로에 대한 통계 보고서"
+    "message": "페이지 이동 통계 보고서"
   },
   "submit_a_new_tracker": {
     "message": "새 트래커 제보하기"
@@ -584,7 +584,7 @@
     "message": "지원 "
   },
   "suspends_privacy_protection_globally_for_1_day_": {
-    "message": "모든 웹 사이트에서 앞으로 하루 동안 개인정보 보호를 중지합니다."
+    "message": "모든 웹 사이트에서 1 일 동안 개인정보 보호를 중지합니다."
   },
   "telemetry": {
     "message": "측정 보고",
@@ -600,22 +600,22 @@
     "message": "이 웹 사이트는 항상 일시 중지됩니다. 웹에서 추적당하지 않기 위해 광고와 트래커를 막으려면 언제든지 Ghostery 설정에서 이를 변경할 수 있습니다"
   },
   "this_site_will_be_paused_for_1_day": {
-    "message": "이 사이트는 하루 동안 중단됩니다"
+    "message": "이 웹 사이트에서 1 일 동안 일시 중지합니다"
   },
   "this_site_will_be_paused_for_1_hour": {
-    "message": "이 사이트는 1시간 동안 일시 중지됩니다"
+    "message": "이 웹 사이트에서 1 시간 동안 일시 중지합니다"
   },
   "to_adjust_privacy_protection_trust_a_site_": {
     "message": "웹 사이트에서 특정 시간동안 개인정보 보호를 중지합니다."
   },
   "to_get_insights_on_add_on_usage__the_following_information_about_the_browser_and_the_extension_is_collected_": {
-    "message": "애드온 사용에 대한 통찰을 얻기 위해, 브라우저와 확장 프로그램에 대한 다음 정보가 수집됩니다:"
+    "message": "확장 프로그램 사용성 분석을 위해 브라우저 및 확장 프로그램 정보가 수집됩니다:"
   },
   "to_monitor_critical_crash_information_of_the_extension__the_following_information_about_errors_is_collected_": {
-    "message": "확장 프로그램의 중요한 충돌 정보를 모니터링하기 위해 다음과 같은 오류 정보가 수집됩니다:"
+    "message": "확장 프로그램에 발생하는 심각한 오류를 탐지하기 위해 오류 관련 정보가 수집됩니다:"
   },
   "to_provide_privacy_protection_features__the_following_information_about_web_trackers_is_collected_": {
-    "message": "개인정보 보호 기능을 제공하기 위해 다음과 같은 웹 추적기 정보가 수집됩니다"
+    "message": "개인정보 보호 기능을 제공하기 위해 웹 사이트 트래커 정보가 수집됩니다:"
   },
   "tracker_database": {
     "message": "트래커 데이터베이스"
@@ -627,7 +627,7 @@
     "message": "트래커 차단됨"
   },
   "trackers_count": {
-    "message": "트래커 갯수"
+    "message": "트래커 개수"
   },
   "trackers_modified": {
     "message": "변경된 트래커"
@@ -696,7 +696,7 @@
     "message": "Ghostery를 마음에 들어해주셔서 감사합니다! 조금의 시간으로 다른 사람들이 저희를 찾게 해주세요."
   },
   "web_trackers": {
-    "message": "웹 추적기"
+    "message": "웹 트래커"
   },
   "website": {
     "message": "웹 사이트"
@@ -723,7 +723,7 @@
     "message": "WhoTracks.Me 휠"
   },
   "with_ghostery_disabled__only_the_basic_functionality_of_naming_trackers_is_available_": {
-    "message": "Ghostery가 비활성화되면 추적기 이름 지정의 기본 기능만 사용할 수 있습니다."
+    "message": "Ghostery가 사용 중지된 상태에서는 기본적인 트래커 정보 확인만 가능합니다."
   },
   "you_are_awesome_": {
     "message": "지원에 진심으로 감사드립니다!"
@@ -738,6 +738,6 @@
     "message": "현재 개인정보 보호 기능"
   },
   "youtube_blocking_you_from_watching_ad_free_videos_": {
-    "message": "YouTube에서 광고없이 동영상을 보지 못하도록 하십니까?"
+    "message": "YouTube에서 광고없이 동영상을 보지 못하도록 하나요?"
   }
 }
